--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <body>
         <header></header>
         <div class="button"></div>
+        <div class="button" style="background-color:#FF4E00"></div>
+        <div class="button" style="background-color:#00dd2f"></div>
         <div class="append"></div>
-        
     </body>
 </html>
