--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <div class="button"></div>
         <div class="button" style="background-color:#FF4E00"></div>
         <div class="button" style="background-color:#00dd2f"></div>
+        <div class="button" style="background-color:#ff4444"></div>
+        <div class="button" style="background-color:#ffdb00"></div>
         <div class="append"></div>
     </body>
 </html>
