--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
         <script src="js/script.js"></script>
     </head>
     <body>
-        <header></header>
-        <div class="button"></div>
-        <div class="button" style="background-color:#FF4E00"></div>
-        <div class="button" style="background-color:#00dd2f"></div>
-        <div class="button" style="background-color:#ff4444"></div>
-        <div class="button" style="background-color:#ffdb00"></div>
+        <header>
+            <div class="button"></div>
+            <div class="button" style="background-color:#FF4E00"></div>
+            <div class="button" style="background-color:#00dd2f"></div>
+            <div class="button" style="background-color:#ff4444"></div>
+            <div class="button" style="background-color:#ffdb00"></div>
+        </header>
+        
+
         <div class="append"></div>
     </body>
 </html>
